// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConflictDiffView RTL layout > snapshot: two-column diff view layout (LTR) 1`] = `
<div
  data-testid="conflict-diff-view"
>
  <div
    class="mb-4 rounded-lg border border-warning/30 bg-warning/10 p-3"
    role="alert"
  >
    <p
      class="text-xs font-bold text-warning"
    >
      Safety-Critical Resource — "Keep Both" is recommended (append-only merge)
    </p>
    <p
      class="text-xs text-warning"
    >
      "Prefer Local" or "Prefer Remote" will discard one version. Use with caution.
    </p>
  </div>
  <div
    class="grid grid-cols-[1fr_1fr] gap-px overflow-hidden rounded-xl ring-[0.65px] ring-border/50 bg-secondary"
    data-testid="diff-grid"
  >
    <div
      class="bg-primary/10 ps-4 pe-4 py-2"
    >
      <span
        class="text-xs font-bold text-primary"
      >
        Local Version
      </span>
    </div>
    <div
      class="bg-secondary ps-4 pe-4 py-2"
    >
      <span
        class="text-xs font-bold text-foreground"
      >
        Remote Version
      </span>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          clinicalStatus
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          active
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          clinicalStatus
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          active
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          verificationStatus
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          verificationStatus
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          type
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          type
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          category
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          category
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          criticality
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          high
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          criticality
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          high
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-warning/10"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          code
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          Penicillin
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-warning/10"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          code
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          Amoxicillin
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          reaction
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          reaction
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          onsetDateTime
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          onsetDateTime
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          note
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <p
          class="text-xs font-semibold text-muted-foreground"
        >
          note
        </p>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          —
        </p>
      </div>
    </div>
  </div>
  <div
    class="mt-4 flex flex-wrap gap-2"
  >
    <button
      class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary text-primary-foreground hover:bg-primary/90 gap-1.5"
      data-testid="resolve-keep-both"
      type="button"
    >
      <span
        class="text-xs font-bold text-success"
      >
        Recommended
      </span>
      Keep Both
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-secondary text-secondary-foreground hover:bg-secondary/80 gap-1.5"
      data-testid="resolve-prefer-local"
      type="button"
    >
      Prefer Local
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-secondary text-secondary-foreground hover:bg-secondary/80 gap-1.5"
      data-testid="resolve-prefer-remote"
      type="button"
    >
      Prefer Remote
    </button>
  </div>
</div>
`;

exports[`ConflictDiffView RTL layout > snapshot: two-column diff view layout (RTL) 1`] = `
<div
  dir="rtl"
>
  <div
    data-testid="conflict-diff-view"
  >
    <div
      class="mb-4 rounded-lg border border-warning/30 bg-warning/10 p-3"
      role="alert"
    >
      <p
        class="text-xs font-bold text-warning"
      >
        Safety-Critical Resource — "Keep Both" is recommended (append-only merge)
      </p>
      <p
        class="text-xs text-warning"
      >
        "Prefer Local" or "Prefer Remote" will discard one version. Use with caution.
      </p>
    </div>
    <div
      class="grid grid-cols-[1fr_1fr] gap-px overflow-hidden rounded-xl ring-[0.65px] ring-border/50 bg-secondary"
      data-testid="diff-grid"
    >
      <div
        class="bg-primary/10 ps-4 pe-4 py-2"
      >
        <span
          class="text-xs font-bold text-primary"
        >
          Local Version
        </span>
      </div>
      <div
        class="bg-secondary ps-4 pe-4 py-2"
      >
        <span
          class="text-xs font-bold text-foreground"
        >
          Remote Version
        </span>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            clinicalStatus
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            active
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            clinicalStatus
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            active
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            verificationStatus
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            verificationStatus
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            type
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            type
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            category
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            category
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            criticality
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            high
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            criticality
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            high
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-warning/10"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            code
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            Penicillin
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-warning/10"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            code
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            Amoxicillin
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            reaction
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            reaction
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            onsetDateTime
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            onsetDateTime
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            note
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            note
          </p>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            —
          </p>
        </div>
      </div>
    </div>
    <div
      class="mt-4 flex flex-wrap gap-2"
    >
      <button
        class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-primary text-primary-foreground hover:bg-primary/90 gap-1.5"
        data-testid="resolve-keep-both"
        type="button"
      >
        <span
          class="text-xs font-bold text-success"
        >
          Recommended
        </span>
        Keep Both
      </button>
      <button
        class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-secondary text-secondary-foreground hover:bg-secondary/80 gap-1.5"
        data-testid="resolve-prefer-local"
        type="button"
      >
        Prefer Local
      </button>
      <button
        class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed bg-secondary text-secondary-foreground hover:bg-secondary/80 gap-1.5"
        data-testid="resolve-prefer-remote"
        type="button"
      >
        Prefer Remote
      </button>
    </div>
  </div>
</div>
`;
